--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
     opacity: 0.8;
 }
 
-#home-section .fas {
+#home-section .fas, #create-section .fas {
     color: #008ed6;
     background: white;
     padding: 5px;
@@ -44,3 +44,10 @@ body {
      padding: 5px;
      border-radius: 5px;
 }
+#create-section {
+    color: white;
+}
+/* #create-head-section {
+    background: #008ed6;
+    color: white;
+} */
